[package]
name = "finchers-todo"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
futures = "~0.1"
hyper = "~0.11"
lazy_static = "1"
serde = "1"
serde_derive = "1"
finchers = { git = "https://github.com/ubnt-intrepid/finchers.git", branch = "fix/issue/20" }
